// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`adds optional to label if not required 1`] = `
Object {
  "props": Object {
    "error": false,
    "helperText": undefined,
    "label": "the label (optional)",
    "onBlur": [Function],
    "onChange": [Function],
    "onFocus": [Function],
    "value": "",
  },
  "validate": [Function],
}
`;

exports[`cancels pristine if initial value changed 1`] = `
Array [
  Object {
    "error": false,
    "helperText": "the help",
    "pristine": false,
    "touched": false,
    "value": "&",
  },
]
`;

exports[`defaults value to empty string 1`] = `
Array [
  Object {
    "error": false,
    "helperText": undefined,
    "pristine": true,
    "touched": false,
    "value": "",
  },
]
`;

exports[`returns all props needed 1`] = `
Object {
  "props": Object {
    "error": false,
    "helperText": "the help",
    "label": "the label",
    "onBlur": [Function],
    "onChange": [Function],
    "onFocus": [Function],
    "value": "the value",
  },
  "validate": [Function],
}
`;

exports[`sets initial values 1`] = `
Array [
  Object {
    "error": false,
    "helperText": "the help",
    "pristine": true,
    "touched": false,
    "value": "the value",
  },
]
`;

exports[`sets touched onBlur 1`] = `
Array [
  Object {
    "error": false,
    "helperText": undefined,
    "pristine": true,
    "touched": true,
    "value": "the value",
  },
]
`;

exports[`validate does not updates state with results of validation if not "touched" 1`] = `
Array [
  Object {
    "error": false,
    "helperText": undefined,
    "pristine": false,
    "touched": false,
    "value": "1",
  },
]
`;

exports[`validate sets required if empty on blur 1`] = `
Array [
  Object {
    "error": true,
    "helperText": "Required",
    "pristine": true,
    "touched": true,
    "value": "",
  },
]
`;

exports[`validate updates state with results of validation if "touched" 1`] = `
Array [
  Object {
    "error": true,
    "helperText": "i am error",
    "pristine": false,
    "touched": true,
    "value": "1",
  },
]
`;

exports[`validate validates onBlur 1`] = `
Array [
  "&",
  "field.name",
]
`;
